# kafka-ddos-usecase

./: .gitignore  README.md  docker-compose.yaml  kafka-notes.md  pyproject.toml
ddos_detection/: algorithm.py  test_algorithm.py
kafka_consumer/: __main__.py
kafka_producer/: __main__.py
